[package]
name = "jspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { path = "../macroquad" } 
nanoserde = "0.1"
bitflags = "1.3"
rayon = "1.5"
crossbeam-channel = "0.5"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
